--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             h1, h2, h3 {
                 font-family: 'Roboto';
                 font-weight: normal;
+                margin: 5px 0 10px 0;
             }
             li { margin-top: 5px; margin-bottom: 5px; font-size: 1.2em; }
             p { font-size: 1.2em; }
