--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
                 font-weight: normal;
                 margin: 5px 0 10px 0;
             }
+            h2 {
+                color: #444444;
+            }
+            h3 {
+                text-transform: lowercase;
+                color: #585858;
+            }
             li { margin-top: 5px; margin-bottom: 5px; font-size: 1.2em; }
             p { font-size: 1.2em; }
             .remark-code, .remark-inline-code {
