--- a/index.html
+++ b/index.html
@@ -14,13 +14,8 @@
                 font-weight: normal;
                 margin: 5px 0 10px 0;
             }
-            h2 {
-                color: #444444;
-            }
-            h3 {
-                text-transform: lowercase;
-                color: #585858;
-            }
+            h2 { color: #444444; }
+            h3 { color: #585858; }
             li { margin-top: 5px; margin-bottom: 5px; font-size: 1.2em; }
             p { font-size: 1.2em; }
             .remark-code, .remark-inline-code {
@@ -45,6 +40,15 @@
                 margin: 0;
                 padding: 0 10px;
             }
+            .inverse {
+                background: #272822;
+                color: #777872;
+                text-shadow: 0 0 20px #333;
+            }
+            .inverse h1, .inverse h2 {
+                color: #f3f3f3;
+                line-height: 0.8em;
+            }
     </style>
     <link rel="stylesheet" href="./hljs-vs2017.css" />
     </head>
@@ -52,7 +56,7 @@
         <script type="text/javascript" src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
         <script type="text/javascript">
             var slideshow = remark.create({ 
-                highlightStyle: 'monokai',
+                // highlightStyle: 'monokai',
                 highlightLanguage: 'typescript',
                 highlightLines: true,
                 highlightSpans: true,
