Demo scaffold with webpack

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,10 +5,11 @@
     <title>RxJS 5.0 Demo</title>
 </head>
 <body>
-    <script src="./require.config.js"></script>
-    <script src="./lib/requirejs/require.js"></script>
-    <script>
-        require(['main']);
-    </script>
+    <div>
+        <input id="input" type="text" />
+        <pre id="output">
+        </pre>
+    </div>
+    <script src="./out/bundle.js"></script>
 </body>
 </html>
